--- a/styles/styles-compilado.css
+++ b/styles/styles-compilado.css
@@ -95,7 +95,8 @@ body {
 
 .img {
   width: 100%;
-  max-width: 500px; }
+  max-width: 500px;
+  margin-top: 10%; }
 
 /*PARA ACOMODAR BOTONES PAG PROD*/
 .btn-BOTT {
