--- a/styles/styles-compilado.css
+++ b/styles/styles-compilado.css
@@ -99,8 +99,8 @@ body {
   margin-top: 10%; }
 
 /*PARA ACOMODAR BOTONES PAG PROD*/
-.btn-BOTT {
-  margin: 20px; }
+.btn-outline-light.btn-tabla-gestion {
+  margin: 20%; }
 
 /*Estilos footer*/
 footer {
