--- a/scss/_partegral.scss
+++ b/scss/_partegral.scss
@@ -3,17 +3,17 @@ h1 {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	text-align: center;
 	color: #e0ff00;
-	padding: 20px;
+	padding: 30px;
 }
 h2 {
 	text-align: center;
 	font-size: 2rem;
 	color: #e0ff00;
-	padding: 17px;
+	padding: 30px;
 }
 h3{
 	color: #e0ff00;
-	padding: 15px;
+	padding: 30px;
 }
 p{
 color: #ffffff;;
@@ -31,6 +31,7 @@ body {
 }
 .table{
 	color: $color-blanco !important;
+	padding: 30px;
 
 }
 /*color de fondo de la card de la imagen*/
@@ -51,4 +52,6 @@ body {
 		margin: 20%;
 	}
 }
-
+.p{
+		padding: 30px;
+		}
